all sections are done

--- a/index.html
+++ b/index.html
@@ -27,10 +27,314 @@
 
     <section class="main-page">
             <div class="main-page__content">
-                <h1 class="main-page__content_title">Une crème dans ta face !</h1>
-                <button class="main-page__content_btn">Etre moins moche</button>
+                <h1 class="main-page__content_title">Une crème dans ta face!</h1>
+                <button class="main-page__content_btn btn">Etre moins moche</button>
             </div>
     </section>
+
+    <section class="nosmer">
+        <h2>Nos mer</h2>
+        <div class="cards__wrapper">
+            <div class="card">
+                <img src="img/skincare_image.jpg" alt="skincare">
+                <h3 class="card__title">Peinturlurage</h3>
+            </div>
+            <div class="card">
+                <img src="img/makeup_image.jpg" alt="make_up">
+                <h3 class="card__title">Rien à care</h3>
+            </div>
+            <div class="card">
+                <img src="img/gifts_image.jpg" alt="gifts">
+                <h3 class="card__title">Les “cadeaux”</h3>
+            </div>
+        </div>
+    </section>
+
+    <section class="surfase">
+        <div class="container">
+            <div class="surfase__wrapper">
+                <div class="surfase__content">
+                    <h2>Surfase</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, voluptatum.</p>
+                    <h4>Etre moins moche</h4>
+                    <p>Ou</p>
+                    <button class="surfase__btn btn">Etre moche</button>
+                    <span class="surfase__qr"><img src="img/qr_code.png" alt="qr-code"></span>
+                </div>
+                <div class="surfase__img">
+                    <img src="img/surfase.png" alt="sur_fase">
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="bienparti">
+        <div class="container">
+            <h2>Nos mer</h2>
+            <div class="cards__wrapper bienparti__wrapper">
+                <div class="bienparti__card">
+                    <div class="bienparti__card_img">
+                        <img src="img/skincare_image.jpg" alt="skincare">
+                    </div>
+                    <div class="bienparti__card_content">
+                        <h4>Peinturlurage</h4>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, voluptatum.</p>
+                        <span>$76.00</span>
+                    </div>
+                </div>
+                <div class="bienparti__card">
+                    <div class="bienparti__card_img">
+                        <img src="img/skincare_image.jpg" alt="skincare">
+                    </div>
+                    <div class="bienparti__card_content">
+                        <h4>Peinturlurage</h4>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, voluptatum.</p>
+                        <span>$76.00</span>
+                    </div>
+                </div>
+                <div class="bienparti__card">
+                    <div class="bienparti__card_img">
+                        <img src="img/skincare_image.jpg" alt="skincare">
+                    </div>
+                    <div class="bienparti__card_content">
+                        <h4>Peinturlurage</h4>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, voluptatum.</p>
+                        <span>$76.00</span>
+                    </div>
+                </div>
+                <div class="bienparti__card">
+                    <div class="bienparti__card_img">
+                        <img src="img/skincare_image.jpg" alt="skincare">
+                    </div>
+                    <div class="bienparti__card_content">
+                        <h4>Peinturlurage</h4>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, voluptatum.</p>
+                        <span>$76.00</span>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="newin">
+        <div class="container">
+            <h2>New in</h2>
+            <div class="newin__wrapper">
+                <div class="newin__promo">
+                    <img src="img/promo_img.png" alt="promo">
+                    <h2 class="card__title">Peinturlurage</h2>
+                    <p>On avait plus assez de maquillage. Du coup on lui a dit de masquer une partie de son visage pour faire genre que c’était “artistique”</p>
+                </div>
+                <div class="bienparti__card newin__card one">
+                    <div class="bienparti__card_img">
+                        <img src="img/skincare_image.jpg" alt="skincare">
+                    </div>
+                    <div class="bienparti__card_content">
+                        <h4>Peinturlurage</h4>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, voluptatum.</p>
+                        <span>$76.00</span>
+                    </div>
+                </div>
+                <div class="bienparti__card newin__card two">
+                    <div class="bienparti__card_img">
+                        <img src="img/skincare_image.jpg" alt="skincare">
+                    </div>
+                    <div class="bienparti__card_content">
+                        <h4>Peinturlurage</h4>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, voluptatum.</p>
+                        <span>$76.00</span>
+                    </div>
+                </div>
+            </div>
+        </div>   
+    </section>
+
+    <section class="offre">
+        <div class="container">
+            <div class="offre__wrapper">
+                <div class="offre__img">
+                    <img src="img/offre_img.png" alt="">
+                </div>
+                <div class="offre__content">
+                    <h2>Offre spéciale</h2>
+                    <h5 class="offre__subtitle">Sois pas radin(e)</h5>
+                    <p>C’est la fête des mères
+                        Et... si elle est comme toi, toi même tu sais qu’elle a besoin...</p>
+                    <span class="offre__action">Clique ici si vraiment tu veux vraiment faire genre “ouai je suis trop forte j’ai trouvé un code promo qui vient pas de shein”</span>
+                    <button class="offre__btn btn">Je Suis Radin</button>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="marque">
+        <div class="container">
+            <div class="surfase__wrapper marque__wrapper">
+                <div class="surfase__content">
+                    <h2>Surfase</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, voluptatum.</p>
+                    <button class="surfase__btn btn">Etre moche</button>
+                </div>
+                <div class="surfase__img">
+                    <img src="img/marque_img.png" alt="notre marque">
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="blog">
+        <div class="container">
+            <h2>Our Blog</h2>
+            <div class="cards__wrapper blog__wrapper">
+                <div class="bienparti__card">
+                    <div class="bienparti__card_img">
+                        <img src="img/blog_img_1.png" alt="blog image">
+                    </div>
+                    <div class="bienparti__card_content">
+                        <h4>How to get clear skin fast</h4>
+                        <span>Skincare | Dr. Wade Warren | Jan 20, 2021</span>
+                        <p>Many people find it difficult to get clear skin. The methods for getting clear skin will vary, depending on the person’s skin type. In general, people struggling with acne or blemishes have skin that is dry, oily, or a combination of the two.</p>
+                    </div>
+                </div>
+                <div class="bienparti__card">
+                    <div class="bienparti__card_img">
+                        <img src="img/blog_img_2.png" alt="blog image">
+                    </div>
+                    <div class="bienparti__card_content">
+                        <h4>How to get clear skin fast</h4>
+                        <span>Skincare | Dr. Wade Warren | Jan 20, 2021</span>
+                        <p>Many people find it difficult to get clear skin. The methods for getting clear skin will vary, depending on the person’s skin type. In general, people struggling with acne or blemishes have skin that is dry, oily, or a combination of the two.</p>
+                    </div>
+                </div>
+                <div class="bienparti__card">
+                    <div class="bienparti__card_img">
+                        <img src="img/blog_img_3.png" alt="blog image">
+                    </div>
+                    <div class="bienparti__card_content">
+                        <h4>How to get clear skin fast</h4>
+                        <span>Skincare | Dr. Wade Warren | Jan 20, 2021</span>
+                        <p>Many people find it difficult to get clear skin. The methods for getting clear skin will vary, depending on the person’s skin type. In general, people struggling with acne or blemishes have skin that is dry, oily, or a combination of the two.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="advantages">
+        <div class="container">
+            <div class="advantages__wrapper">
+                <div class="advantages__item">
+                    <div class="advantages__item_img"><img src="icons/advantages_1.svg" alt="advantage"></div>
+                    <div class="advantages__item_text">Testé sur les animaux</div>
+                </div>
+                <div class="advantages__item">
+                    <div class="advantages__item_img"><img src="icons/advantages_2.svg" alt="advantage"></div>
+                    <div class="advantages__item_text">Des ingrédients douteux</div>
+                </div>
+                <div class="advantages__item">
+                    <div class="advantages__item_img"><img src="icons/advantages_3.svg" alt="advantage"></div>
+                    <div class="advantages__item_text">Avec du gluten et de l’arsénique</div>
+                </div>
+                <div class="advantages__item">
+                    <div class="advantages__item_img"><img src="icons/advantages_4.svg" alt="advantage"></div>
+                    <div class="advantages__item_text">Radioactive</div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <footer>
+        <section class="footer_1">
+            <div class="container">
+                <div class="footer_1__wrapper">
+                    <div class="footer_1__content">
+                        <h2>T’es perdu?</h2>
+                        <ul>
+                            <li><a href="#">Beautya branches</a></li>
+                            <li><a href="#">Contact</a></li>
+                            <li><a href="#">FAQ</a></li>
+                            <li><a href="#">Notre marque</a></li>
+                            <li><a href="#">Blog</a></li>
+                        </ul>
+                    </div>
+                    <div class="footer_1__content">
+                        <h2>Nos crèmes</h2>
+                        <ul>
+                            <li><a href="#">Peinturlurage</a></li>
+                            <li><a href="#">Rien à care</a></li>
+                            <li><a href="#">Les “cadeaux”</a></li>
+                        </ul>
+                    </div>
+                    <div class="footer_1__content">
+                        <h2>Kip in touche!</h2>
+                        <ul>
+                            <li>
+                                <a href="#">C’est comme ça qu’on dit en anglais pour faire genre que tu veux recevoir des nouveautés.</a>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="footer_1__content">
+                        <form name="email" action="#" method="post">
+                            <div>
+                                <input type="email" name="email" placeholder="Email address" required aria-label="Enter your email" />
+                                <button class="btn" type="submit">Je Suis Radin</button>
+                            </div>
+                            <label class="custom-checkbox">
+                                <input type="checkbox" name="agree" value="yes" required />
+                                <span class="checkmark"></span>
+                                Vous acceptez de recevoir des e-mails pourris toute votre vie.
+                            </label>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section class="footer_2">
+            <div class="container">
+                <div class="footer_2__wrapper">
+                    <div class="footer_2__contacts">
+                        <div class="footer_2__contacts-item">
+                            <img src="icons/location.svg" alt="location">
+                            Dr Parfait, Belgique.
+                        </div>
+                        <div class="footer_2__contacts-item">
+                            <img src="icons/call.svg" alt="call">
+                            3630 3630 Allô Père Noël
+                        </div>
+                    </div>
+                    <div class="footer_2__social">
+                        <ul>
+                            <li><a href="#"><img src="icons/instagram.svg" alt="instagram"></a></li>
+                            <li><a href="#"><img src="icons/facebook.svg" alt="fasebook"></a></li>
+                            <li><a href="#"><img src="icons/twitter.svg" alt="twitter"></a></li>
+                            <li><a href="#"><img src="icons/pinterest.svg" alt="pinterest"></a></li>
+                            <li><a href="#"><img src="icons/reddit.svg" alt="reddit"></a></li>
+                            <li><a href="#"><img src="icons/tikTok.svg" alt="tiktok"></a></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </section>
+            
+        <section class="footer_3">
+            <div class="container">
+                <div class="footer_3__wrapper">
+                    <div class="footer_3__copyright">
+                        © 2024 Une crème dans ta face. <br>
+                        All Rights Reserved.
+                    </div>
+                    <div class="footer_3__conditions">
+                        <ul>
+                            <li><a href="#">Terms & Conditions</a></li>
+                            <li><a href="#">Privacy Policy</a></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+    </footer>
 
 </body>
 </html>
